# RTX_Render

./: .gitignore  .gitmodules  CMakeLists.txt  Vec3.h  aabb.cpp  aabb.h  bvh.cpp  camera.h  drand48.cpp  drand48.h  hitable.cpp  hitable.h  hitableList.cpp  hitableList.h  imageTexture.cpp  main.cpp  material.cpp  material.h  perlin.cpp  perlin.h  ray.cpp  ray.h  rayTracing.cpp  rayTracing.sln  rayTracing.vcxproj  rayTracing.vcxproj.filters  readme.markdown  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  texture.cpp  texture.h
Doc/: Bias_And_Consistency.md  Convolution_Derivation.md  Fourier_Series_Derivation.md  Fourier_Transform_Derivation.md  HighDimension_Fourier_Derivation.md  LaTeX公式-demo.md  Point_in_triangle_test.md
Doc/CMU_15_462/: 04_Rasterization_Sample.md  14_Color.md  15_Radiometry.md  16_The Rendering Equation.md  16_The_Rendering_Equation.md  17_Numerical_Integration.md  18_Monte_Carlo_Rendering.md  19_Variance Reduction.md  Fourier_Series_Derivation.md  Fourier_Transform_Derivation.md
Doc/PBRT_Note/: 2D_Sampling_with_Multidimensional_Transformations.md  Light_Transport_Surface_reflection.md  Microfacet_Models.md
Source/: .gitignore  CMakeLists.txt
Source/RayTracing/: CMakeLists.txt  Vec3.h  bvh.cpp  bvh.h  camera.cpp  camera.h  drand48.h  hitableList.h  imageTexture.h  material.cpp  perlin.cpp  perlin.h  ray.h
image/: picture_1 - 副本.ppm  picture_1.ppm  picture_2.ppm
